<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="calculadoraactivity.cursaoandroid.com.calculadoraactivity.MainActivity"
    android:background="@color/colorPrimary">

    <Button
        android:text="@string/valor_botao_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/button1"
        style="@android:style/Widget.Button.Transparent" />

    <Button
        android:text="@string/valor_botao_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button1"
        android:layout_toRightOf="@+id/button1"
        android:layout_toEndOf="@+id/button1"
        android:id="@+id/button2"
        style="@android:style/Widget.Button.Transparent" />

    <Button
        android:text="@string/valor_botao_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button2"
        android:layout_toRightOf="@+id/button2"
        android:layout_toEndOf="@+id/button2"
        android:id="@+id/button3"
        style="@android:style/Widget.Button.Transparent" />

    <Button
        android:text="@string/valor_botao_soma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button3"
        android:layout_toRightOf="@+id/button3"
        android:layout_toEndOf="@+id/button3"
        android:id="@+id/buttonSoma"
        style="@android:style/Widget.Button.Transparent" />

    <Button
        android:text="@string/valor_botao_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button1"
        android:layout_toLeftOf="@+id/button2"
        android:layout_toStartOf="@+id/button2"
        android:id="@+id/button4"
        style="@android:style/Widget.Button.Transparent" />

    <Button
        android:text="@string/valor_botao_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button2"
        android:layout_toRightOf="@+id/button4"
        android:layout_toEndOf="@+id/button4"
        android:id="@+id/button5"
        style="@android:style/Widget.Button.Transparent" />

    <Button
        android:text="@string/valor_botao_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button3"
        android:layout_toRightOf="@+id/button5"
        android:layout_toEndOf="@+id/button5"
        android:id="@+id/button6"
        style="@android:style/Widget.Button.Transparent" />

    <Button
        android:text="@string/valor_botao_subtracao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button3"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/buttonSubtracao"
        style="@android:style/Widget.Button.Transparent" />

    <Button
        android:text="@string/valor_botao_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/button7"
        style="@android:style/Widget.Button.Transparent" />

    <Button
        android:text="@string/valor_botao_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button5"
        android:layout_toLeftOf="@+id/buttonSubtracao"
        android:layout_toStartOf="@+id/buttonSubtracao"
        android:id="@+id/button9"
        style="@android:style/Widget.Button.Transparent" />

    <Button
        android:text="@string/valor_botao_divisao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonSubtracao"
        android:layout_toRightOf="@+id/button9"
        android:layout_toEndOf="@+id/button9"
        android:id="@+id/buttonDivisao"
        style="@android:style/Widget.Button.Transparent" />

    <Button
        android:text="@string/valor_botao_multiplicacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonDivisao"
        android:layout_toRightOf="@+id/button9"
        android:layout_toEndOf="@+id/button9"
        android:id="@+id/buttonMultiplicacao"
        style="@android:style/Widget.Button.Transparent" />

    <Button
        android:text="@string/valor_botao_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button5"
        android:layout_toRightOf="@+id/button7"
        android:layout_toEndOf="@+id/button7"
        android:id="@+id/button8"
        style="@android:style/Widget.Button.Transparent" />

    <Button
        android:text="@string/valor_botao_resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button9"
        android:layout_toRightOf="@+id/button8"
        android:layout_toEndOf="@+id/button8"
        android:id="@+id/buttonResultado"
        style="@android:style/Widget.Button.Transparent" />

    <Button
        android:text="@string/valor_botao_ponto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/buttonResultado"
        android:layout_toLeftOf="@+id/button9"
        android:layout_toStartOf="@+id/button9"
        android:id="@+id/buttonPonto"
        style="@android:style/Widget.Button.Transparent" />

    <Button
        android:text="@string/valor_botao_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button7"
        android:layout_toLeftOf="@+id/buttonPonto"
        android:layout_toStartOf="@+id/buttonPonto"
        android:id="@+id/button0"
        style="@android:style/Widget.Button.Transparent" />

    <Switch
        android:text="@string/valor_botao_trocador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/switch1"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
        android:textColor="@android:color/background_light" />

    <TextView
        android:text="@string/resultado_activity_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="87dp"
        android:id="@+id/textView1"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        android:textStyle="normal|bold"
        android:textAlignment="center" />

</RelativeLayout>
